--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,114 @@
     font-family: 'roboto', sans-serif;
 }
 
+
+
+input, textarea {
+    width: 100%;
+    background-color: #242424;
+    color: white;
+    outline: none;
+    border: 3px solid #c0c4cc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 40px;
+    transition: all 350ms ease;
+    
+}
+
+input:hover,
+textarea:hover
+{
+border-color: #dcdfe6 ;    
+}
+
+input:focus,
+textarea:focus
+{
+border-color: #f06449 ;    
+}
+
+.textarea {
+    resize: vertical;
+    height: 100px;
+    margin-top:8px;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.about_me {
+    cursor: pointer;
+}
+
+.link_hover-effect{
+    position: relative;
+}
+
+
+
+.link_hover-effect:after {
+    content: "";
+    bottom: -3px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    position: absolute;
+    transition: all 300ms ease;
+
+}
+
+.link_hover--effect-black:after {
+    background-color: black ;
+}
+
+.link_hover--effect-white:after {
+    background-color: white ;
+}
+
+.link_hover-effect:hover:after{
+    left: 0;
+    width: 100%;
+}
+
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 300ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header 
+{
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+
+.container {
+    padding: 50px 0px;
+    width: 100%;
+}
+
+.row {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 12px;
+}
+
+
 .click:hover {
     transform: scale(1.1);
 }
@@ -18,6 +126,7 @@
 
 .click {
     transition: all 300ms ease;
+    cursor: pointer;
 }
 
 button {
@@ -39,6 +148,7 @@ a {
 
 section {
 background-color: rgb(245, 245, 245);
+transition: all 300ms ease;
 }
 
 .purple {
@@ -53,11 +163,53 @@ background-color: rgb(245, 245, 245);
     line-height:1
 }
 
+.dark-theme #personal-logo {
+    filter: invert(100);
+}
+
+.dark-theme .purple
+{
+    color:#E8E163;
+}
+
+.dark-theme .scroll_icon {
+    border-color: white;
+}
+
+.dark-theme .mail_btn {
+    background-color: white;
+    color: black;
+}
+
+.dark-theme .scroll_icon:after,
+.dark-theme .link_hover--effect-black:after
+{
+    background-color: white;
+}
+
+.dark-theme .social_link {
+    background-color: #E8E163;
+    color: black;
+}
+
+.dark-theme .title,
+.dark-theme .section_title,
+.dark-theme .header_para,
+.dark-theme .nav_link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .title
+{
+color: white;
+}
+
+.dark-theme section{
+background-color: #242424;
+}
 
 
 /* LANDING PAGE */
 
-#landing-page {
+#landing_page {
     min-height: 100vh;
 }
 
@@ -88,6 +240,8 @@ background-color: rgb(245, 245, 245);
 
 
 }
+
+
 
 .header {
     position: absolute;
@@ -186,5 +340,315 @@ nav {
 .fa-adjust {
     font-size: 20px;
 
+}
+
+/* MODAL */
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 1100px;
+    height: 700px;
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+    visibility: hidden;
+    z-index: -1;
+    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
+
+.modal--open .modal_about,
+.modal--open .modal_contact {
+    transform: translateX(0%);
+}
+
+.modal_about {
+    background-color: rgb(245, 245, 245);
+    transform: translateX(-110%);
+}
+
+.modal--open .modal{
+    z-index: 60;
+    visibility: visible;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+}
+
+
+.modal_half {
+    width: 50%;
+    padding: 40px 72px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    transition: all 300ms ease;
+}
+
+
+
+.form_submit {
+    background-color: #f06449;
+    border: 2px solid #f06449;
+    color: white;
+    font-weight:700;
+    width: 50%;
+    max-width: 240px;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 8px;
+    transition: all 300ms ease;
+}
+
+.form_submit:hover{
+    background-color: transparent;
+    border-color: white;
+}
+
+.form_submit:active {
+    border-color: #f06449;
+    color: #f06449
+}
+
+.css{
+    height: 68.8px;
+}
+
+.modal_contact {
+    background-color: #242424;
+    color: white;
+    transform: translateX(110%);
+}
+
+.modal_title {
+    font-size: 26px;
+}
+
+.modal_subtitle {
+margin: 12px 0 24px 0 ;
+font-size: 14px;
+}
+
+.modal_para {
+    margin-bottom: 12px;
+    line-height: 1.75;
+}
+
+.modal_languages {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.language_stack {
+    font-size: 22px;
+    margin-bottom:8px;
+    margin: 0 auto;
+}
+
+.modal_language:hover {
+    transform: scale(0.8);
+    filter: brightness(80%);
+}
+
+.modal_language:hover .language_name {
+transform: scale(1);
+}
+
+.modal_language {
+width: 25%;
+padding: 16px;
+display: flex;
+flex-direction: column;
+align-items: center;
+position: relative;
+transition: all 300ms ease;
+}
+
+.language_name {
+    position: absolute;    
+    bottom: -10px;
+    transform: scale(0);
+    transition: all 300ms ease;
+
+}
+
+.modal_language--image{
+    width: 100%;
+}
+
+ .form__item {
+    margin-bottom: 20px;
+ }
+
+.modal_overlay {
+    position: absolute;
+    top:0 ;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    
+   
+}
+
+ .modal_overlay--loading{
+    background-color: #242424;
+    font-size: 80px;
+    z-index: -1;
+ }
+
+ .modal_overlay--success {
+    background-color: #4bb543;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    padding: 28px;
+    z-index: -1;
+ }
+
+ .fa-spinner {
+animation: spinner 750ms infinite linear;
+ }
+
+.modal_overlay--visible{
+    z-index:1;
+    display: flex;
+}
+
+ @keyframes spinner{
+    0%{
+transform: rotate(0);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+ }
+
+.modal_exit {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: white;
+    font-size: 36px;
+    z-index: 100;
+}
+
+/* PROJECTS */
+
+.section_title {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 60px;
+}
+
+.project {
+    margin-bottom: 135px;
+}
+
+.project_image {
+    width: 100%;
+    transition: all 600ms ease;
+}
+
+.project_wrapper {
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+}
+
+.project_description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    color: white;
+    max-width: 550px;
+    opacity: 0;
+    transition: opacity 300ms, transform 450ms ease;
+}
+
+.project_wrapper-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 450ms ease;
+}
+
+.project_description--title {
+    font-size: 40px
+}
+
+.project_description--sub-title {
+    margin-top: 8px;
+}
+
+.project_description--para {
+    margin: 16px 0;
+}
+
+.project_description--link {
+    font-size: 20px;
+    color: white;
+    margin-right: 16px;
+}
+
+.project_wrapper:hover .project_description {
+opacity: 1;
+transform: translateY(-50%);
+}
+
+.project_wrapper:hover .project_image {
+transform:scale(1.07);
+filter: blur(5px);
+}
+
+.project_wrapper:hover .project_wrapper-bg {
+opacity: 0.7;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #242424;
+    display: flex;
+    padding: 6% 0;
+
+}
+
+.footer_logo {
+    filter: invert(100);
+    width: 70px
+}
+
+.footer_row{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer_social--list {
+    width: 100%;
+    max-width: 500px;
+    margin:28px 0px;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.footer_social--link,
+.footer_copyright
+{
+color: white;
 }
 
